Week 10 slides and final assignment

--- a/assignments.html
+++ b/assignments.html
@@ -960,8 +960,8 @@ Lectures
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1051,8 +1051,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1178,8 +1182,9 @@ class="math inline">\(t\)</span>-test</p></li>
 <h2>3.5. Final</h2>
 <p>Final assignment</p>
 <p>Deadline: December 7, 11:59pm</p>
-<p>Download:
-<!-- [html file](./assignments/assignment05.html) | [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) --></p>
+<p>Download: <a href="./assignments/assignment05.html">html file</a> |
+<a href="./data/ah01.csv">ah01.csv dataset</a>; <a
+href="./data/ah02.csv">ah02.csv dataset</a></p>
 <p>Key: [doc file]; [R script]</p>
 </div>
 </div>
