--- a/index.html
+++ b/index.html
@@ -961,8 +961,8 @@ Lectures
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1052,8 +1052,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
