--- a/schedule.html
+++ b/schedule.html
@@ -960,8 +960,8 @@ Lectures
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
 <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
-<span class="nav-dropdown-header">17. NHST critiques</span>
-<span class="nav-dropdown-header">18. NHST critiques and summary</span>
+<a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+<a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
 </div>
 </div>
@@ -1051,8 +1051,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
     </li>
-    <li class="dropdown-header">17. NHST critiques</li>
-    <li class="dropdown-header">18. NHST critiques and summary</li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1298,10 +1302,6 @@ bivariate regression model</li>
 <li>Conduct a statistical inference test of the slope and intercept of a
 bivariate regression model</li>
 <li>Write R scripts to conduct these analyses</li>
-<li>Articulate modern critiques of null-hypothesis significance testing
-framework</li>
-<li>Describe strategies to improve replicability and generalizability of
-quantitative research</li>
 </ul>
 <p>Readings:</p>
 <ul>
@@ -1337,18 +1337,26 @@ href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 </div>
 <div id="unit-5" class="section level2">
 <h2>Unit 5</h2>
+<p><strong>Topic: Critiques of NHST</strong></p>
+<p>Objectives:</p>
 <ul>
-<li><p>Classes 17-18 (11/29 &amp; 12/1):
-<!-- [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf) --></p></li>
+<li><p>Articulate modern critiques of null-hypothesis significance
+testing framework</p></li>
+<li><p>Describe strategies to improve replicability and generalizability
+of quantitative research</p></li>
+<li><p>Classes 17-18 (11/29 &amp; 12/1): <a
+href="./slides/EDUC641_17_critiques.html">html</a> | <a
+href="./slides/EDUC641_17_critiques.pdf">pdf</a> -</p></li>
 <li><p>Data management cheat sheet: [pdf]</p></li>
 </ul>
 </div>
 <div id="final-assignment" class="section level2">
 <h2>Final Assignment</h2>
 <ul>
-<li>Due December 7 at 11:59pm
-<!-- - [html file](./assignments/assignment05.html) -->
-<!-- - [ah01.csv](./data/ah01.csv); [ah02.csv](./data/ah02.csv) --></li>
+<li>Due December 7 at 11:59pm</li>
+<li><a href="./assignments/assignment05.html">html file</a></li>
+<li><a href="./data/ah01.csv">ah01.csv</a> | <a
+href="./data/ah02.csv">ah02.csv</a></li>
 </ul>
 </div>
 
