--- a/data_management.html
+++ b/data_management.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="David Liebowitz" />
+<meta name="author" content="David D. Liebowitz" />
 
 
 <title>Data Management Cheat Sheet</title>
@@ -633,7 +633,7 @@ body {
 <script src="site_libs/header-attrs-2.14.3/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -1007,7 +1007,7 @@ Lectures
 
 
 <h1 class="title toc-ignore">Data Management Cheat Sheet</h1>
-<h4 class="author">David Liebowitz</h4>
+<h4 class="author">David D. Liebowitz</h4>
 <h4 class="date">EDUC 641: Fall 2022</h4>
 
 </div>
@@ -1018,9 +1018,10 @@ class="section level2">
 <h2>Setting up project and directory structure</h2>
 <p>Open your RStudio, create a project and save it. Go to the root
 directory of the project and create folders named: “Code”, “Data”,
-“Figures” and “Tables.” Download the <a href="./data/cont.csv">cont.csv
-dataset</a> and store it in the folder “Data”. Create an R script (or
-.Rmd) file in the Code folder.</p>
+“Figures” and “Tables.” Download the <a
+href="./data/life_expectancy.csv">life_expectancy.csv dataset</a> and
+store it in the folder “Data”. Create an R script (or .Rmd) file in the
+Code folder.</p>
 </div>
 <div id="load-relevant-packages" class="section level2">
 <h2>Load relevant packages</h2>
