Fix broken link

--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -383,9 +383,9 @@ clearly when your work is joint and any other individual or resource
 <h3>Submission Requirements</h3>
 <p>Please upload below two files on Canvas:</p>
 <ol style="list-style-type: decimal">
-<li>An .html or .pdf file that includes your typed responses (in your
-own words and not identical to anybody else’s except your partner),
-tables, and/or figures to the problems</li>
+<li>An .html, .doc(x) or .pdf file that includes your typed responses
+(in your own words and not identical to anybody else’s except your
+partner), tables, and/or figures to the problems</li>
 <li>The .Rmd or .R file that you used to render the tables and figures
 in the above html/pdf.</li>
 </ol>
@@ -462,7 +462,7 @@ male.</li>
 <h4>1. Read in the dataset</h4>
 <p>Open your RStudio, create a project and save it. Go to the root
 directory of the project and create folders named: “Code”, “Data”,
-“Figures” and “Tables.” Download the <a href="./data/cat.csv">cat.csv
+“Figures” and “Tables.” Download the <a href="../data/cat.csv">cat.csv
 dataset</a> and store it in the folder “Data”. Create an R script (or
 .Rmd) file in the Code folder. Read the data into your R environment.
 You do not need to include this response in your memo; only in your
