--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -463,7 +463,7 @@ male.</li>
 <h4>1. Read in the dataset</h4>
 <p>Open your RStudio, create a project and save it. Go to the root
 directory of the project and create folders named: “Code”, “Data”,
-“Figures” and “Tables.” Download the <a href="./data/cat.csv">cat.csv
+“Figures” and “Tables.” Download the <a href="../data/cat.csv">cat.csv
 dataset</a> and store it in the folder “Data”. Create an R script (or
 .Rmd) file in the Code folder. Read the data into your R environment.
 You do not need to include this response in your memo; only in your
