--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -460,7 +460,7 @@ a vocabulary test.</li>
 <p><strong>Data preparation</strong> <em>(same as Assignment 3)</em>:
 Open your RStudio, create a project and save it. Go to the root
 directory of the project and create folders named: “Code”, “Data”,
-“Figures” and “Tables.” Download the <a href="./data/cont.csv">cont.csv
+“Figures” and “Tables.” Download the <a href="../data/cont.csv">cont.csv
 dataset</a> and store it in the folder “Data”. Create an R script (or
 .Rmd) file in the Code folder. Read the data into your R environment.
 Transform variables, as needed. You do not need to include this part of
