--- a/assignments/assignment05.html
+++ b/assignments/assignment05.html
@@ -432,10 +432,10 @@ lifetime earnings.</p>
 having a school-based mentor in one’s schooling trajectory is related to
 these outcomes. In this final project, we invite you to investigate
 <strong>THREE</strong> research questions. Everyone will address
-Question 1 (using the <a href="./data/ah01.csv">ah01.csv dataset</a>).
+Question 1 (using the <a href="../data/ah01.csv">ah01.csv dataset</a>).
 You will pick either Question 2 or 3, using the same dataset. Then, you
 will extend Kraft et al. by choosing one of Questions 4 or 5 (using the
-<a href="./data/ah02.csv">ah02.csv dataset</a>). The research questions
+<a href="../data/ah02.csv">ah02.csv dataset</a>). The research questions
 you will tackle are:</p>
 <p><strong>REQUIRED</strong>:</p>
 <ol style="list-style-type: decimal">
