--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -457,7 +457,7 @@ a vocabulary test.</li>
 <h4>1. Dataset</h4>
 <p>1.1. Open your RStudio, create a project and save it. Go to the root
 directory of the project and create folders named: “Code”, “Data”,
-“Figures” and “Tables.” Download the <a href="./data/cont.csv">cont.csv
+“Figures” and “Tables.” Download the <a href="../data/cont.csv">cont.csv
 dataset</a> and store it in the folder “Data”. Create an R script (or
 .Rmd) file in the Code folder. Read the data into your R environment.
 You do not need to include this part of the response in your memo; only
