--- a/assignments.html
+++ b/assignments.html
@@ -1176,7 +1176,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <p>Deadline: November 29, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment04.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<p>Key: [doc file]; [R script]</p>
+<p>Key: <a href="./assignments/keys/assignment04_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment04_key.R">R script</a></p>
 </div>
 <div id="final" class="section level2">
 <h2>3.5. Final</h2>
