Fix error in Assignment 4

--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -481,9 +481,9 @@ this display. <strong>(2 points)</strong></p>
 have higher student score? Why or why not? <strong>(1
 point)</strong></p>
 </div>
-<div id="research-question-did-the-dosage-of-the-coursework-pd-intervention-impact-children-vocabulary" class="section level4">
-<h4>2. Research Question: Did the dosage of the coursework PD
-intervention impact children vocabulary?</h4>
+<div id="research-question-is-the-dosage-the-pd-intervention-related-to-childrens-vocabulary-scores" class="section level4">
+<h4>2. Research Question: Is the dosage the PD intervention related to
+children’s vocabulary scores?</h4>
 <p>2.1. Write your null hypothesis about the relationship between
 coursework dosage and teachers’ students’ average vocabulary scores.
 <strong>(1 point)</strong></p>
