--- a/slides/EDUC641_17_critiques.html
+++ b/slides/EDUC641_17_critiques.html
@@ -264,16 +264,16 @@ Assume that we find that average national life expectancy is significantly great
 
 .blue[**Which of the following statements is correct, given *p* = .03**]:
 * **A.** There is a 3% probability that high-income countries do not have a higher average life expectancy (the null hypothesis).
-* **B.** There is a 3% probability that the results are due to random chance, rather than the effect of income level.
+* **B.** There is a 3% probability that the results are due to sampling idiosyncrasy, rather than a true relationship in the population.
 * **C.** A statistically significant difference means higher income-levels yield higher life expectancies.
-* **D.** The observed data would only occur 3% of the time if the null hypothesis was true.
-* **E.** Previous research found that in 2005, income-level failed to produce a significant difference in average life expectancy (*p* = .17). Therefore, income-level is more influential on life expectancy in 2015 than in 2005.
+* **D.** The observed data would occur 3% of the time if the null hypothesis were true.
+* **E.** Previous research found that in 2005, income-level was not related to average life expectancy (*p* = .17). Therefore, income-level is more stronyl related to life expectancy in 2015 than in 2005.
 * **F.** Another research group finds a statistically significant difference between countries with socialized medicine compared to those without (*p* = .001). Their smaller *p* value means that socialized medicine is more effective at increasing life expectancy than income level.
 
 ---
 # The convoluted logic of NHST
 
-.red-pink[**None of the previous interpretations were correct, yet these are commonly expressed in scientific literature!**]
+.red-pink[**Only D on the previous slide is correct, yet all of these are commonly expressed in the scientific literature!**]
 
 In frequentist statistics, we establish an **objective decision rule**: if our observed data has less than a 5 percent chance of occurring (or less than 1% or less than 0.1% or less than 10%) due to sampling idiosyncrasy, we will conclude that the observed relationship in the sample represents a true relationship in the population. 
 
@@ -362,7 +362,7 @@ $$
 $$
 --
 
-I found this to be a helpful explainer [video](https://www.youtube.com/watch?v=HaYbxQC61pw)
+I found this to be a helpful explainer [video](https://www.youtube.com/watch?v=HaYbxQC61pw).
 
 ---
 # Bayesian Example
@@ -432,9 +432,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 1: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 1: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 1: 
-#&gt; Chain 1:  Elapsed Time: 0.042 seconds (Warm-up)
-#&gt; Chain 1:                0.045 seconds (Sampling)
-#&gt; Chain 1:                0.087 seconds (Total)
+#&gt; Chain 1:  Elapsed Time: 0.047 seconds (Warm-up)
+#&gt; Chain 1:                0.047 seconds (Sampling)
+#&gt; Chain 1:                0.094 seconds (Total)
 #&gt; Chain 1: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 2).
@@ -457,9 +457,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 2: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 2: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 2: 
-#&gt; Chain 2:  Elapsed Time: 0.038 seconds (Warm-up)
-#&gt; Chain 2:                0.042 seconds (Sampling)
-#&gt; Chain 2:                0.08 seconds (Total)
+#&gt; Chain 2:  Elapsed Time: 0.028 seconds (Warm-up)
+#&gt; Chain 2:                0.051 seconds (Sampling)
+#&gt; Chain 2:                0.079 seconds (Total)
 #&gt; Chain 2: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 3).
@@ -482,9 +482,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 3: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 3: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 3: 
-#&gt; Chain 3:  Elapsed Time: 0.037 seconds (Warm-up)
-#&gt; Chain 3:                0.041 seconds (Sampling)
-#&gt; Chain 3:                0.078 seconds (Total)
+#&gt; Chain 3:  Elapsed Time: 0.044 seconds (Warm-up)
+#&gt; Chain 3:                0.045 seconds (Sampling)
+#&gt; Chain 3:                0.089 seconds (Total)
 #&gt; Chain 3: 
 #&gt; 
 #&gt; SAMPLING FOR MODEL 'continuous' NOW (CHAIN 4).
@@ -507,9 +507,9 @@ bayes &lt;- stan_glm(life_expectancy ~ schooling, data = who,
 #&gt; Chain 4: Iteration: 1800 / 2000 [ 90%]  (Sampling)
 #&gt; Chain 4: Iteration: 2000 / 2000 [100%]  (Sampling)
 #&gt; Chain 4: 
-#&gt; Chain 4:  Elapsed Time: 0.036 seconds (Warm-up)
-#&gt; Chain 4:                0.045 seconds (Sampling)
-#&gt; Chain 4:                0.081 seconds (Total)
+#&gt; Chain 4:  Elapsed Time: 0.04 seconds (Warm-up)
+#&gt; Chain 4:                0.051 seconds (Sampling)
+#&gt; Chain 4:                0.091 seconds (Total)
 #&gt; Chain 4:
 ```
 ---
@@ -592,6 +592,12 @@ Due Dec. 7, 11:59pm
 
 ### Re-submission
 Assignments &lt;13.5, resubmissions due on Canvas 12/2 at 5pm
+
+### End-of-term SES
+
+--
+
+# .red[**Thanks!**]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
