--- a/slides/EDUC641_1_intro.html
+++ b/slides/EDUC641_1_intro.html
@@ -4,7 +4,7 @@
     <title>Introduction and Principles of Quantitative Research</title>
     <meta charset="utf-8" />
     <meta name="author" content="David D. Liebowitz" />
-    <script src="EDUC641_1_intro_files/header-attrs-2.14.3/header-attrs.js"></script>
+    <script src="EDUC641_1_intro_files/header-attrs-2.20/header-attrs.js"></script>
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/uo.css" rel="stylesheet" />
     <link href="EDUC641_1_intro_files/remark-css-0.0.1/ki-fonts.css" rel="stylesheet" />
@@ -191,7 +191,7 @@ class: middle, inverse
 - LSWR Chapter 2: this is a brief summary of what you have/will learn(ed) in EDUC 612 
 - LSWR Chapter 3: this covers some information from the R Bootcamp and more 
     + You will **not** internalize all of this in one reading and practice session. Give it a skim, play around with R while you're doing so, and you can return to it as you want/need to build more of programming skills.
-- Clayton (2020)
+- Light, Singer &amp; Willet (1990), pp. 1-40
 
 ### Assignment:
 - Have downloaded R/RStudio and familiarized yourself with the RStudio environment (Modules 1 &amp; 2 from [R Bootcamp](https://community.uoregon.edu/courses/18778))
