--- a/assignments.html
+++ b/assignments.html
@@ -629,7 +629,7 @@ body {
   padding-top: 60px;
 }
 </style>
-<script src="site_libs/header-attrs-2.14.3/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.20/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -799,8 +799,8 @@ $(document).ready(function () {
   border-radius: 4px;
 }
 
-.tabset-dropdown > .nav-tabs > li.active:before {
-  content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "\e259";
   font-family: 'Glyphicons Halflings';
   display: inline-block;
   padding: 10px;
@@ -808,16 +808,9 @@ $(document).ready(function () {
 }
 
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-  content: "&#xe258;";
-  border: none;
-}
-
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-  content: "";
+  content: "\e258";
   font-family: 'Glyphicons Halflings';
-  display: inline-block;
-  padding: 10px;
-  border-right: 1px solid #ddd;
+  border: none;
 }
 
 .tabset-dropdown > .nav-tabs > li.active {
@@ -1089,20 +1082,28 @@ Lectures
 <p>The goal of the assignments is to practice the concepts and
 vocabulary we have been modeling in class and implement some of the
 techniques we have learned. You may work on your own or collaborate with
-one (1) partner. Please make sure that you engage in a full, fair and
-mutually-agreeable collaboration if you choose to collaborate. If you do
-collaborate, you should plan, execute and write-up your analyses
-together, not simply divide the work. Please make sure to indicate
-clearly when your work is joint and any other individual or resource
-(outside of class material) you consulted in your responses.</p>
+one (1) or two partner(s). Please make sure that you engage in a full,
+fair and mutually-agreeable collaboration if you choose to collaborate.
+If you do collaborate, you should plan, execute and write-up your
+analyses together, not simply divide the work. Please make sure to
+indicate clearly when your work is joint and any other individual or
+resource (outside of class material) you consulted in your responses.
+Per the syllabus, please clearly state if you have relied on AI tools to
+generate your original text. You need not do so if you have used these
+tools only to help with coding tasks and/or light editing.</p>
 <p>Each of the four assignments during the term is worth 15 points, and
 the final project is worth 30 points. Assignments are due at 11:59pm on
 their due date. If circumstances arise that require an extension on an
 assignment, please communicate with the lead instructor <em>prior</em>
 to the assignment’s due date. We will publish the answer keys to
 assignments prior to class the following day; thus, late assignments
-will be penalized by two (2) points. Late final projects may results in
-a final grade of I or D/F.</p>
+will be penalized by two (2) points. While it is acceptable to consult
+the answer keys if you submit an assignment late, submissions that
+re-iterate word for word (or nearly so) the answer key will not be
+accepted. All late assignments must be turned in by the last day of
+classes. Late final projects may result in a final grade of I or D/F.
+Assignments scoring below a 13 may be revised and can receive a maximum
+score of up to 13.</p>
 </div>
 <div id="submission-requirements" class="section level1">
 <h1>2. Submission Requirements</h1>
