Fix rendering issues with Fall 2023 update

--- a/index.html
+++ b/index.html
@@ -1109,11 +1109,10 @@ analysis by <strong>doing</strong> statistical analysis. <em>This course
 </div>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
-<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD - David D. Liebowitz - ======= -
-David D. Liebowitz (office hours: Thursdays 9:00-10:30am or by
-appointment) - Claire Zhang - Havisha Khurana
-&gt;&gt;&gt;&gt;&gt;&gt;&gt;
-e0db08480a45fd8031d1aa71ae1a60584fe5d9ef</p>
+<ul>
+<li>David D. Liebowitz</li>
+<li></li>
+</ul>
 </div>
 
 <!--radix_placeholder_site_after_body-->
