Launch first draft version of Fall 2023 site

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@ Lectures
 </div>
 <div class="nav-right">
 <a href="assignments.html">Assignments</a>
-<a href="https://github.com/uo-educ-quant/641">
+<a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
 <i class="fa fa-github" aria-hidden="true"></i>
 </a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -1059,7 +1059,7 @@ Lectures
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="https://github.com/uo-educ-quant/641">
+  <a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
     <span class="fa fa-github"></span>
      
   </a>
@@ -1103,15 +1103,19 @@ analysis by <strong>doing</strong> statistical analysis. <em>This course
 <div id="meeting-time-and-location" class="section level1">
 <h1>Meeting time and location</h1>
 <ul>
-<li><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm,</li>
-<li><em>Lab:</em></li>
+<li><em>Class:</em> Tuesdays and Thursdays, 4:00pm - 5:20pm, HEDCO
+142</li>
+<li><em>Lab:</em> Wednesdays, 4:00p - 4:50p, Lokey 115; Thursdays, 5:30p
+- 6:20p, HEDCO 142</li>
 </ul>
 </div>
 <div id="instructors" class="section level1">
 <h1>Instructors</h1>
 <ul>
-<li>David D. Liebowitz</li>
-<li></li>
+<li>David D. Liebowitz (office hours: Thursdays, 9 - 10:30 Lokey 102S or
+<a href="https://uoregon.zoom.us/j/6336067468">Zoom</a>)</li>
+<li>Havisha Khurana</li>
+<li>Brittany Spinner</li>
 </ul>
 </div>
 
