--- a/about.html
+++ b/about.html
@@ -884,7 +884,7 @@ Lectures
 </div>
 <div class="nav-right">
 <a href="assignments.html">Assignments</a>
-<a href="https://github.com/uo-educ-quant/641">
+<a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
 <i class="fa fa-github" aria-hidden="true"></i>
 </a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
@@ -982,7 +982,7 @@ Lectures
   <a href="assignments.html">Assignments</a>
 </li>
 <li>
-  <a href="https://github.com/uo-educ-quant/641">
+  <a href="https://github.com/DavidDLiebowitz/EDUC641_23F">
     <span class="fa fa-github"></span>
      
   </a>
