Update course sequence

--- a/assignments.html
+++ b/assignments.html
@@ -949,10 +949,10 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
+<a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships</a>
 <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
 <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
-<a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
+<a href="./slides/EDUC641_16_residuals.html">16. Bivariate regression III</a>
 <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
 <a href="./slides/EDUC641_17_critiques.html">18. NHST critiques and summary</a>
 </div>
@@ -1033,7 +1033,7 @@ Lectures
       <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships I</a>
+      <a href="./slides/EDUC641_14_continuousrel.html">13. Continuous relationships</a>
     </li>
     <li>
       <a href="./slides/EDUC641_15_regression.html">14. Bivariate regression I</a>
@@ -1042,7 +1042,7 @@ Lectures
       <a href="./slides/EDUC641_16_residuals.html">15. Bivariate regression II</a>
     </li>
     <li>
-      <a href="./slides/EDUC641_16_residuals.html">16. Regression assumptions</a>
+      <a href="./slides/EDUC641_16_residuals.html">16. Bivariate regression III</a>
     </li>
     <li>
       <a href="./slides/EDUC641_17_critiques.html">17. NHST critiques</a>
